--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,11 @@
-/* You can add global styles to this file, and also import other style files */
+@import '~@angular/material/theming';
+@include mat-core();
+$candy-app-primary: mat-palette($mat-blue, 800);
+$candy-app-accent:  mat-palette($mat-amber, 600);
+$candy-app-warn:    mat-palette($mat-red, A700);
+$candy-app-theme: mat-light-theme($candy-app-primary, $candy-app-accent, $candy-app-warn);
+@include angular-material-theme($candy-app-theme);
+
+html, body {
+  margin: 0;
+}
