--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -18,7 +18,7 @@
       </a>
       <mat-divider></mat-divider>
       <h3 matSubheader>Actualités</h3>
-      <a mat-list-item href="#">
+      <a mat-list-item routerLink="/announcements" routerLinkActive="active-link">
         <mat-icon mat-list-icon>notifications</mat-icon>
         <span mat-line>Annonces</span>
       </a>
