--- a/src/app/components/events/events.component.scss
+++ b/src/app/components/events/events.component.scss
@@ -3,3 +3,20 @@
   font-weight: 300;
   padding: 40px;
 }
+
+.events-container {
+  padding: 30px;
+  margin: 20px;
+
+  .event-card {
+    max-width: 400px;
+
+    .event-header-image {
+      background-size: cover;
+    }
+
+    .event-info-icon {
+      color: rgba(0, 0, 0, 0.54);
+    }
+  }
+}
