feat(events): Make app responsive

--- a/src/app/components/events/events.component.scss
+++ b/src/app/components/events/events.component.scss
@@ -8,15 +8,7 @@
   padding: 30px;
   margin: 20px;
 
-  .event-card {
-    max-width: 400px;
-
-    .event-header-image {
-      background-size: cover;
-    }
-
-    .event-info-icon {
-      color: rgba(0, 0, 0, 0.54);
-    }
+  .event-row {
+    margin-bottom: 30px;
   }
 }
