--- a/src/app/components/events/events.component.html
+++ b/src/app/components/events/events.component.html
@@ -3,33 +3,14 @@
 </mat-toolbar>
 
 <div class="events-container" fxLayout="column" fxLayoutAlign="space-around" fxLayoutGap="30px">
-  <div fxLayout="row" fxLayoutAlign="space-around" *ngFor="let i of rows">
-    <mat-card class="event-card" *ngFor="let event of events | slice:(i*2):(i+1)*2">
-      <img mat-card-image [src]="event.headerImageUrl" [alt]="event.name">
-      <mat-card-content>
-        <h1>Maddy Keynote 2019</h1>
-        <p fxLayout="row" fxLayoutAlign="start center" fxLayoutGap="10px">
-          <mat-icon class="event-info-icon">calendar_today</mat-icon>
-          <span>{{event.dateStart | date: 'fullDate'}}</span>
-        </p>
-        <p fxLayout="row" fxLayoutAlign="start center" fxLayoutGap="10px">
-          <mat-icon class="event-info-icon">place</mat-icon>
-          <span class="text-info">{{event.location}}</span>
-        </p>
-      </mat-card-content>
-      <mat-card-header>
-        <div
-          mat-card-avatar
-          class="event-header-image"
-          [ngStyle]="{
-            'background-image': 'url(' + event.organiser.imageUrl + ')'
-          }"></div>
-        <mat-card-title>{{event.organiser.name}}</mat-card-title>
-        <mat-card-subtitle>{{event.organiser.subtitle}}</mat-card-subtitle>
-      </mat-card-header>
-      <mat-card-actions fxLayout="row" fxLayoutAlign="end">
-        <button mat-raised-button color="primary">PARTICIPER</button>
-      </mat-card-actions>
-    </mat-card>
+  <div *ngIf="!(isHandset$ | async); else oneColumn">
+    <div class="event-row" fxLayout="row" fxLayoutAlign="space-around" *ngFor="let i of rows">
+      <app-event-item [event]="event" *ngFor="let event of events | slice:(i*2):(i+1)*2"></app-event-item>
+    </div>
   </div>
+  <ng-template #oneColumn>
+    <div fxLayout="row" fxLayoutAlign="space-around" *ngFor="let event of events">
+      <app-event-item [event]="event"></app-event-item>
+    </div>
+  </ng-template>
 </div>
