--- a/src/app/components/event-item/event-item.component.html
+++ b/src/app/components/event-item/event-item.component.html
@@ -1,4 +1,4 @@
-<mat-card class="event-card">
+<mat-card class="event-card" fxLayout="column">
   <img mat-card-image [src]="event.headerImageUrl" [alt]="event.title">
   <mat-card-content>
     <h1>{{event.title}}</h1>
@@ -24,7 +24,15 @@
     <mat-card-title>{{event.organiser.name}}</mat-card-title>
     <mat-card-subtitle>{{event.organiser.subtitle}}</mat-card-subtitle>
   </mat-card-header>
-  <mat-card-actions fxLayout="row" fxLayoutAlign="end">
-    <button mat-raised-button color="primary">PARTICIPER</button>
+  <div class="event-card-filler"></div>
+  <mat-card-actions fxLayout="row" fxLayoutAlign="end end">
+    <a
+      mat-raised-button
+      color="primary"
+      target="_blank"
+      rel="noopener noreferrer"
+      [href]="event.ticketsUrl">
+      PARTICIPER
+    </a>
   </mat-card-actions>
 </mat-card>
