--- a/src/app/components/events/events.component.html
+++ b/src/app/components/events/events.component.html
@@ -5,7 +5,7 @@
 <div class="events-container" fxLayout="column" fxLayoutAlign="space-around" fxLayoutGap="30px">
   <div *ngIf="!(isHandset$ | async); else oneColumn">
     <div class="event-row" fxLayout="row" fxLayoutAlign="space-around" *ngFor="let i of rows">
-      <app-event-item [event]="event" *ngFor="let event of events | slice:(i*2):(i+1)*2"></app-event-item>
+      <app-event-item [event]="event" fxLayoutAlign="strech" *ngFor="let event of events | slice:(i*2):(i+1)*2"></app-event-item>
     </div>
   </div>
   <ng-template #oneColumn>
